--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,28 @@
-# Ignorar archivos de Excel generados
-*.xlsx
-
-# Ignorar imágenes generadas
-*.png
-
-# Ignorar archivos de caché de Python
 __pycache__/
 *.pyc
 *.pyo
-
-# Ignorar entornos virtuales
-.venv/
-venv/
+*.pyd
+.Python
 env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+.env
+.venv
+venv/
+ENV/
+.idea/
+.vscode/
+*.log
+desktop.ini
